<resources>
    <string name="app_name">PassIt1</string>
    <string name="let_s_start">Let\'s Start!</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_the_best_n_app_that_will_help_you_n_keep_your_routine">Welcome to the best\n app that will help you\n keep your routine!</string>
    <string name="i_already_have_an_account">I Already have an Account</string>
    <string name="welcome_back_password">Password</string>
    <string name="welcome_back_email">Email</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome_back_login">Login</string>
    <string name="heart_image">HeartImage</string>
    <string name="pass_it_image">Pass_It_Image</string>
    <string name="we_want_to_know_what_you_like">We Want To Know What You Like:</string>
    <string name="question1">Are you going to work now?</string>
    <string name="yes_radio1">Yes</string>
    <string name="no_radio1">No</string>
    <string name="do_you_do_sport">Do You Do Sport?</string>
    <string name="no_radio2">No</string>
    <string name="yes_radio2">Yes</string>
    <string name="yes_radio3">Yes</string>
    <string name="no_radio3">No</string>
    <string name="stay_alone_at_home">Stay alone at home?</string>
    <string name="next_button">Next</string>
    <string name="your_age">Your Age</string>
    <string name="what_interesting_you">What Interesting You ?</string>
    <string name="cooking">Cooking</string>
    <string name="cookingImage">cookingImage</string>
    <string name="sport">Sport</string>
    <string name="businessesImage">Businesses</string>
    <string name="businessesText">Businesses</string>
    <string name="cooking_image">Cooking</string>
    <string name="businesses_image">Businesses</string>
    <string name="businesses_text">Businesses</string>
    <string name="Technology_text">Technology</string>
    <string name="Technology_image">Technology_image</string>
    <string name="DIY_text">DIY-Do it yourself</string>
    <string name="DIY_image">DIY_image</string>
    <string name="travel_image">treavel_text</string>
    <string name="travelImage">travelImage</string>
    <string name="travel1_image">Travel</string>
    <string name="travel_Text">Travel</string>
    <string name="courses">Courses</string>
    <string name="CoursesImage">courses_image</string>
    <string name="music_image">Music</string>
    <string name="music_text">Music</string>
    <string name="choose_date">Choose the days you will stay in quarantine</string>
    <string name="day_1_bar">Day 1</string>
    <string name="quot_the_best_way_to_get_started_is_to_quit_n_talking_and_begin_doing_quot_n_walt_disney">\"“The Best Way To Get Started Is To Quit\n Talking And Begin Doing.”\"\n Walt Disney</string>
    <string name="_8_00_time_to_wake_up">8:00 Time to wake up!</string>
    <string name="_8_30_meditation_what_are_my_goals_for_today">8:30 Meditation + What are my goals for today?</string>
    <string name="_8_45_breakfast">8:45 Breakfast</string>
    <string name="_9_15_it_s_time_for_good_podcast">9:15 It\'s time for good Podcast</string>
    <string name="_11_30_time_for_a_good_shower">11:30 Time for a good shower!</string>
    <string name="_10_30_let_s_take_a_break_to_move_our_body">10:30 Let\'s take a break to move our body!</string>
    <string name="_12_00_it_s_reading_time">12:00 It\'s reading time!</string>
    <string name="_13_00_lunch_time_cooking_or_wolt">13:00 Lunch time! Cooking or Wolt?</string>
    <string name="covid">covid</string>
    <string name="podcast">podcast</string>
    <string name="gym">gym</string>
    <string name="which_training_do_you_want_to_do_today_npilates_yoga_zumba_nclick_here_to_find_all_the_options_ndon_t_forget_to_share_with_your_friends_your_training">Which training do you want to do today?\nPilates? Yoga? Zumba?\nClick here to find all the options!\nDon\'t forget to share with your friends your training!</string>
    <string name="we_hope_you_enjoyed_your_training">We hope you enjoyed your training!</string>
    <string name="click_here_to_read_n_10_scientific_facts_about_reading_books_n_and_how_could_it_really_improve_your_life">Click here to read\n 10 SCIENTIFIC FACTS ABOUT READING BOOKS\n AND HOW COULD IT REALLY IMPROVE YOUR LIFE</string>
    <string name="recipes">Recipes!</string>
    <string name="wolt">Wolt!</string>
    <string name="already_have_lunch">Already have lunch!</string>
    <string name="next_b">Next</string>
    <string name="choose_the_days_you_will_n_stay_on_quarantine">Choose the days you will\n stay on quarantine</string>
    <string name="next_next">Next</string>
    <string name="choose_start_date">Choose Start Date</string>
    <string name="choose_end_day">Choose end day</string>
    <string name="next1111">Next</string>
    <string name="_15_00_a_nap">15:00 A nap</string>
    <string name="_16_00_it_s_good_time_to_study_something_new">16:00 It\'s good time to study something new!</string>
    <string name="_netflix_time">Netflix time</string>
    <string name="dinner">Dinner!</string>
    <string name="phone_calls_for_the_people_you_like">21:00 Phone calls for the people you like</string>
    <string name="time_for_yourself">22:00 Time for yourself</string>

    <string-array name="spinner1">
        <item>If yes-how much hours at day?</item>
        <item>No</item>
        <item>Part time job</item>
        <item>Full time</item>
    </string-array>

    <string-array name="spinner2">
        <item>What is your favorite sport?</item>
        <item>Yoga </item>
        <item>Indoor training </item>
        <item>Pilates</item>
        <item>Zumba</item>
    </string-array>

</resources>