<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToKnowTheClientMenu"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/WhatInterestingYou"
        android:layout_width="409dp"
        android:layout_height="62dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:autofillHints=""
        android:background="#98C1D9"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:text="@string/what_interesting_you"
        android:textAlignment="center"
        android:textColor="#3D5A80"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextViewEdits" />

    //Sport

    <ImageView
        android:id="@+id/sportImage"
        android:layout_width="124dp"
        android:layout_height="109dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="239dp"
        android:layout_marginRight="239dp"
        android:contentDescription="@string/sport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/sport1_foreground"
        tools:ignore="MissingConstraints" />

    //Businesses

    //Technology

    <TextView
        android:id="@+id/SportText"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="198dp"
        android:layout_marginEnd="237dp"
        android:layout_marginRight="237dp"
        android:gravity="center_horizontal"
        android:text="@string/sport"
        android:textAlignment="center"
        android:textColor="#3D5A80"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/BusinessesImage"
        android:layout_width="124dp"
        android:layout_height="109dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="239dp"
        android:layout_marginRight="239dp"
        android:contentDescription="@string/businesses_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/businesses_foreground"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/BusinessesText"
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="237dp"
        android:layout_marginRight="237dp"
        android:gravity="center_horizontal"
        android:text="@string/businesses_text"
        android:textAlignment="center"
        android:textColor="#3D5A80"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BusinessesImage" />

    <ImageView
        android:id="@+id/TechnologyImage"
        android:layout_width="124dp"
        android:layout_height="109dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="239dp"
        android:layout_marginRight="239dp"
        android:contentDescription="@string/Technology_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/technology_foreground"
        tools:ignore="MissingConstraints" />

    //DIY

    <TextView
        android:id="@+id/TechnologyText"
        android:layout_width="120dp"
        android:layout_height="34dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="237dp"
        android:layout_marginRight="237dp"
        android:gravity="center_horizontal"
        android:text="@string/Technology_text"
        android:textAlignment="center"
        android:textColor="#3D5A80"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/DIYImage"
        android:layout_width="124dp"
        android:layout_height="109dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="239dp"
        android:layout_marginRight="239dp"
        android:contentDescription="@string/DIY_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/diy_foreground"
        tools:ignore="MissingConstraints" />

    //Cooking

    <TextView
        android:id="@+id/DIYText"
        android:layout_width="148dp"
        android:layout_height="38dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="563dp"
        android:layout_marginEnd="213dp"
        android:layout_marginRight="213dp"
        android:text="@string/DIY_text"
        android:textColor="#3D5A80"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //Travel

    <ImageView
        android:id="@+id/cookingImage"
        android:layout_width="120dp"
        android:layout_height="77dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/cookingImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toEndOf="@+id/sportImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cooking1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/CookingImage"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_marginStart="225dp"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:gravity="center_horizontal"
        android:text="@string/cooking_image"
        android:textAlignment="center"
        android:textColor="#3D5A80"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/travelImage"
        android:layout_width="128dp"
        android:layout_height="107dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:contentDescription="@string/travel1_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sportImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/travel_foreground"
        tools:ignore="MissingConstraints" />

    //Courses

    <TextView
        android:id="@+id/TravelImage"
        android:layout_width="95dp"
        android:layout_height="34dp"
        android:layout_marginStart="246dp"
        android:layout_marginLeft="246dp"
        android:layout_marginTop="309dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center_horizontal"
        android:text="@string/travel_Text"
        android:textAlignment="center"
        android:textColor="#3D5A80"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Courses1Image"
        android:layout_width="107dp"
        android:layout_height="103dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/CoursesImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sportImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/courses_foreground"
        tools:ignore="DuplicateIds,MissingConstraints" />

    //Music

    <TextView
        android:id="@+id/CoursesImage"
        android:layout_width="95dp"
        android:layout_height="34dp"
        android:layout_marginStart="246dp"
        android:layout_marginLeft="246dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center_horizontal"
        android:text="@string/courses"
        android:textAlignment="center"
        android:textColor="#3D5A80"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/MusicImage"
        android:layout_width="148dp"
        android:layout_height="128dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="458dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:contentDescription="@string/music_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sportImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/music_foreground"
        tools:ignore="MissingConstraints" />


    //Next

    <TextView
        android:id="@+id/Music1Image"
        android:layout_width="95dp"
        android:layout_height="34dp"
        android:layout_marginStart="246dp"
        android:layout_marginLeft="246dp"
        android:layout_marginTop="561dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center_horizontal"
        android:text="@string/music_text"
        android:textAlignment="center"
        android:textColor="#3D5A80"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Next123"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/next_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#98C1D9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //checkbox left side

    <CheckBox
        android:id="@+id/checkBoxSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatInterestingYou" />

    <CheckBox
        android:id="@+id/checkBoxBusinesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatInterestingYou" />

    <CheckBox
        android:id="@+id/checkBoxTechnology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatInterestingYou" />

    <CheckBox
        android:id="@+id/checkBoxDIY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatInterestingYou" />

    //checkbox right side

    <CheckBox
        android:id="@+id/checkBoxCooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="285dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatInterestingYou" />

    <CheckBox
        android:id="@+id/checkBoxTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="285dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatInterestingYou" />

    <CheckBox
        android:id="@+id/checkBoxMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="285dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="345dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatInterestingYou" />

    <CheckBox
        android:id="@+id/checkBoxCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="285dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhatInterestingYou" />

</androidx.constraintlayout.widget.ConstraintLayout>